# cmake-project-template

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  CODEOWNERS  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.gitlab/: Code Review.md
app-src/: README.txt  main.cpp
app_src/: main.cpp
apps/: README.txt  app.cpp
cmake/: CodeCoverage.cmake  README.txt  cyclomatic_exceptions.py  lib-config.cmake  lint.py  mylib-config.cmake  pc-lint.cmake  pmccabe.cmake  pmccabe_threshold.py  version.h.in
cmake/lint/: README.md  au-autosar.lnt  au-misra3.lnt  co-clang.h  co-clang.lnt  co-gcc.h  co-gcc.lnt  options.lnt
docs/: README.txt
include/: README.txt
include/lib/: lib.hpp
include/mylib/: mylib.h  mylib.hpp  version.h.in
src/: README.txt  lib.cpp  mylib.cpp
tests/: CMakeLists.txt  README.txt  test_lib.cpp  test_lib.hpp  test_mylib.cpp  test_mylib.h  test_mylib.hpp
tests/src/: test_lib.cpp
